--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
         <tr>
             <td><img width="230" height="300" src="paramjeet.jpg" alt="Paramjeet's Photo"></td>
             <td><h1>Paramjeet Kumar Mahato</h1>
-                <p><h3><i>Student of B.Tech CSE (NITMAS)</i></h3></p></td>
+                <p><h3><i>Student of B.Tech CSE (NITMAS)</i></h3></p>
+                <a href="#Education"> <p>Education Qualification</p></a>
+                <a href="#project"> <p>Project</p></a>
+                <a href="#contact"> <p>Connect With Me</p></a>
+        </td>
         </tr>
     </table>
     <hr>
-    <h2>Education Qualification</h2>
+    <h2 id="Education">Education Qualification</h2>
     <table border="">
         <tr>
             <td>Institute</td>
@@ -42,7 +46,7 @@
             <td> </td>   
         </tr>
     </table>
-    <h2>Project</h2>
+    <h2 id="project">Project</h2>
     <ul>
         <li>
             <p><strong>Virtual Keyboard</strong></p>
@@ -54,7 +58,7 @@
         <li>Playing Video Games</li>
         <li>Coding</li>
     </ul>
-    <h2>Connect With Me</h2>
+    <h2 id="Contact">Connect With Me</h2>
     <ul>
         <li>Email: <a href="mailto:mahatoparamjeet11@gmail.com"><i>mahatoparamjeet11@gmail.com</i></a></li>
         <li>Instagram: <a target="_blank" href="https://www.instagram.com/mahato_ji_11"> <i>@mahato_ji_11</i></a></li>
