--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li>Email: <a href="mailto:mahatoparamjeet11@gmail.com"><i>mahatoparamjeet11@gmail.com</i></a></li>
         <li>Instagram: <a target="_blank" href="https://www.instagram.com/mahato_ji_11"> <i>@mahato_ji_11</i></a></li>
         <li>Linkedin: <a target="_blank" href="https://www.linkedin.com/in/paramjeet-kumar-mahato-946585242"><i>Paramjeet Kumar Mahato</i></a></li>
+        <li>Github: <a target="_blank" href="https://github.com/mahatoji11">mahatoji11</a></li>
     </ul>
 </body>
 </html>
