--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <tr>
             <td><img width="230" height="300" src="paramjeet.jpg" alt="Paramjeet's Photo"></td>
             <td><h1>Paramjeet Kumar Mahato</h1>
-                <p><h3><i>Student of B.Tech CSE (NITMAS)</i></h3></p>
+                <p><h3><i>Persuing MTech in Computer Science and Engineering from Indian Institute Of Technology, Guwahati</i></h3></p>
                 <a href="#Education"> <p>Education Qualification</p></a>
                 <a href="#project"> <p>Project</p></a>
                 <a href="#contact"> <p>Connect With Me</p></a>
@@ -29,10 +29,16 @@
             <td>Passing Year</td>
         </tr>
         <tr>
-            <td>B.B.St.Thomas Memorial School</td>
-            <td>W.B.B.S.E.</td>
-            <td>Secondary Education</td>
-            <td>2019</td>
+            <td>Indian Institue Of Technology, Guwahati</td>
+            <td>IITG</td>
+            <td>MTech CSE</td>
+            <td> </td>
+        </tr>
+        <tr>
+            <td>NITMAS</td>
+            <td>MAKAUT</td>
+            <td>B.Tech CSE</td>
+            <td>2025</td>
         </tr>
         <tr>
             <td>B.B.St.Thomas Memorial School</td>
@@ -41,27 +47,34 @@
             <td>2021</td>
         </tr>
         <tr>
-            <td>NITMAS</td>
-            <td>MAKAUT</td>
-            <td>B.Tech CSE</td>
-            <td> </td>   
+            <td>B.B.St.Thomas Memorial School</td>
+            <td>W.B.B.S.E.</td>
+            <td>Secondary Education</td>
+            <td>2019</td>  
         </tr>
     </table>
     <h2 id="project">Project</h2>
     <ul>
         <li>
             <p><strong>Virtual Keyboard</strong></p>
+            <p><strong>College Grievance Portal</strong></p>
         </li>
+    </ul>
+    <h2>Programming Languages</h2>
+    <ul>
+        <li>C, C++, Python, HTML, CSS, Javascript, MySQL</li>
+        
     </ul>
     <h2>Interest</h2>
     <ul>
+        <li>Riding Bike</li>
         <li>Playing Cricket</li>
         <li>Playing Video Games</li>
         <li>Coding</li>
     </ul>
     <h2 id="Contact">Connect With Me</h2>
     <ul>
-        <li>Email: <a href="mailto:mahatoparamjeet11@gmail.com"><i>mahatoparamjeet11@gmail.com</i></a></li>
+        <li>Email: <a href="mailto:paramjeetmahato11@gmail.com"><i>paramjeetmahat011@gmail.com</i></a></li>
         <li>Instagram: <a target="_blank" href="https://www.instagram.com/mahato_ji_11"> <i>@mahato_ji_11</i></a></li>
         <li>Linkedin: <a target="_blank" href="https://www.linkedin.com/in/paramjeet-kumar-mahato-946585242"><i>Paramjeet Kumar Mahato</i></a></li>
         <li>Github: <a target="_blank" href="https://github.com/mahatoji11">mahatoji11</a></li>
