--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
     <h2 id="project">Project</h2>
     <ul>
         <li>
-            <p><strong>Virtual Keyboard</strong></p>
-            <p><strong>College Grievance Portal</strong></p>
+            <p><a target="_blank" href="https://github.com/mahatoji11/Virtual-Keyboard"><strong>Virtual Keyboard</strong></a></p>
+        </li>
+        <li>
+            <p><a target="_blank" href="https://github.com/mahatoji11/College_grievance_portal"><strong>College Grievance Portal</strong></a></p>
         </li>
     </ul>
     <h2>Programming Languages</h2>
