--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <tr>
             <td><img width="230" height="300" src="paramjeet.jpg" alt="Paramjeet's Photo"></td>
             <td><h1>Paramjeet Kumar Mahato</h1>
-                <p><h3>About Me <br>
-Hi, I'm Paramjeet Kumar Mahato, a passionate coder and a dedicated student currently pursuing my M.Tech in Computer Science and Engineering at IIT Guwahati. I specialize in turning ideas into efficient, scalable, and innovative solutions through code. <br>
+                <p><h3>About Me</h3> <br>
+Hi, I'm <strong>Paramjeet Kumar Mahato</strong>, a passionate coder and a dedicated student currently pursuing my <strong>M.Tech in Computer Science and Engineering at IIT Guwahati</strong>. I specialize in turning ideas into efficient, scalable, and innovative solutions through code. <br>
 My academic journey has not only deepened my understanding of core computer science principles but also fueled my interest in solving real-world problems through programming. I enjoy working on projects that challenge me to learn new technologies, explore advanced algorithms, and build impactful applications.<br>
 This portfolio is a reflection of my growth, curiosity, and commitment to becoming a better developer every day. Feel free to explore my work, and don’t hesitate to reach out if you’re interested in collaborating or discussing tech!<br>
-</h3></p>
+</p>
                 <a href="#Education"> <p>Education Qualification</p></a>
                 <a href="#project"> <p>Project</p></a>
                 <a href="#contact"> <p>Connect With Me</p></a>
